openshift/4.0/templates/tekton/triggers/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: git-webhook-pim-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  host: pims-tekton.apps.silver.devops.gov.bc.ca
  path: /hooks/app
  to:
    kind: Service
    name: el-git-pims-app
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: git-webhook-pim-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  host: pims-tekton.apps.silver.devops.gov.bc.ca
  path: /hooks/api
  to:
    kind: Service
    name: el-git-pims-api
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
